# medialoader

./: CMakeLists.txt  Readme.md
image/: FormatHandler.cpp  pixelformat.cpp
include/medialoader/image/: pixelformat.h
include/medialoader/sound/: ModPlugDecoder.h
sound/: Mpg123Decoder.cpp
sound-libs/libmodplug/: CMakeLists.txt
sound-libs/libogg/include/ogg/: os_types.h
